# CourseWork

./: .gitignore  Archive.cpp  Archive.h  ArchiverExecutor.cpp  ArchiverExecutor.h  ArciverExecutor.cpp  ArciverExecutor.h  CMakeLists.txt  Config.h  ConfigMapper.cpp  ConfigMapper.h  Exception.h  Fano.cpp  Fano.h  Log.cpp  Log.h  README.md  SyntaxChecker.cpp  SyntaxChecker.h  Tree.cpp  Tree.h  Utils.cpp  executeFano.cpp  main.cpp  tree.cpp  tree.h
archiver/: BodyBinary.cpp  BodyBinary.h  FanoCodesBinary.cpp  FanoCodesBinary.h  Tree.cpp  Tree.h
binary/: BinaryIO.cpp  BinaryIO.h
test/: test2.docx
utils/: ConfigMapper.cpp  ConfigMapper.h  Exception.cpp  Exception.h  Utils.h
